# capablanca

./: .travis.yml  README  README.md
.github/workflows/: c-cpp.yml
CVS/: Entries  Repository
bots/CVS/: Entries  Repository
bots/mamer/: .gitignore  AUTHORS  Command.cc  Command.cpp  Command.hh  CommandEntry.cc  CommandEntry.cpp  CommandEntry.hh  Game.cc  Game.cpp  Game.hh  Makefile  Makefile.am  Makefile.in  Mamer.cc  Mamer.cpp  Mamer.hh  Player.cc  Player.cpp  Player.hh  Storage.cc  Storage.cpp  Storage.hh  Tourney.cc  Tourney.cpp  Tourney.hh  TourneyParameters.cc  TourneyParameters.cpp  TourneyParameters.hh  TourneyPlayers.cc  TourneyPlayers.cpp  TourneyPlayers.hh  User.cc  User.cpp  User.hh  aclocal.m4  build.sh  command_list.h  config.h  configure  (+9 more)
bots/mamer/data/: managers
bots/mamer/help/: about  addchaos  addtotourney  announce  chaos  close  create  delete  finger  forfeit  help  index  join  keep  listmanagers  listplayers  listtourneys  listtourneyvars  loadedusers  manager_commands  manager_help  manager_level  messman  open  pause  performance  rating  resume  setcommandlevel  setmanagerlevel  setres  setstat  settourneyvar  showcommands  showhelpfile  shutdown  swiss  upset  user_commands  who  (+1 more)
bots/mamer/players/a/: admin
bots/mamer/template/: template.cc  template.hh
data/CVS/: Entries  Repository
data/admin/: accounts  acheckhelp  aconfig  addaccounts  addcomment  addplayer  adjud_info  adjudicate  admin  admin_hierarchy  adump  ahelp  amotd  anews  announce  annunreg  areload  asetadmin  asetblitz  asetbughouse  asetemail  asethandle  asetlight  asetmaxplayer  asetpasswd  asetrealname  asetstd  asetv  asetwild  ban  buglist  canewsd  canewse  canewsf  canewsi  canewsp  canewst  chkgame  chkip  chkpl  (+28 more)
data/admin/CVS/: Entries  Repository
data/boards/: 1
data/boards/CVS/: Entries  Repository
data/boards/capablanca/: bird  carrera  embassy  ganesha  gothic  sovereign
data/boards/courier/: 0
data/boards/fairy/: 0  amazon  archbishop  chancellor  nightrider
data/boards/fischerandom/: 0
data/boards/great/: 0  shatranj
data/boards/knightmate/: 0
data/boards/loop/: 0
data/boards/shogi/: 0  10p  19p  2gain  2lance  2p  3p  4p  5p  6p  7p  8p  9p  9square  bishop  bishopgain  dobutsu  dragonfly  dragonfly2  dragonfly4  heian  lance  lsilver  micro  mini  openair  promotions  rlance  rook  rookgain  rooklance  rooksilver  rsilver  taiko  taikodragon  threepawns
data/boards/spartan/: 0
data/boards/wild/: 28  37  ca  sc  sj
data/boards/xiangqi/: 0
data/book/CVS/: Entries  Repository
data/com_help/CVS/: Repository
data/help/: _help  abort  abuser  accept  addlist  addresses  adjourn  adjournments  adjud_info  adjudication  adm-info  adm-new  adm_info  adm_new  admins  alias  allobservers  analysis  assess  backward  bell  best  blitz  bname  boards  bsetup  busy  censor  chan_1  channel  clearmessages  clrsquare  cls_info  computers  courtesyabort  credit  cshout  date  decline  draw  (+169 more)
data/help/CVS/: Entries  Repository
data/lists/: td
data/messages/: admotd  login  logout  logout.fancy  motd  unregistered  welcome
data/messages/CVS/: Entries  Repository
data/stats/CVS/: Entries  Repository
data/usage/: abort  accept  acheckhelp  aconfig  addcomment  addlist  addplayer  adjourn  adjudicate  admin  adump  ahelp  alias  allobservers  anews  announce  annunreg  areload  asetadmin  asetblitz  asetbughouse  asetclock  asetemail  asethandle  asetlight  asetmaxplayer  asetpasswd  asetrealname  asetstd  asetsuicide  asetv  asetwild  assess  backward  bell  best  bname  boards  bsetup  bugwho  (+152 more)
data/usage/CVS/: Entries  Repository
doc/: CREDITS  Changelog  README_LEGAL  README_Nash
doc/CVS/: Entries  Repository
games/CVS/: Repository
games/history/CVS/: Repository
scripts/: chessd-mamer.service  chessd.service  spool_sendmail  start_chessd
scripts/CVS/: Entries  Repository
src/: .cvsignore  .gitignore  Makefile.in  acconfig.h  aclocal.m4  adminproc.c  algcheck.c  autoconfig.h.in  board.c  board.h  command.c  command.h  command_list.h  common.h  comproc.c  config.c  config.h  configure  configure.ac  configure.in  crypt-md5.c  crypt-md5c.c  crypt-misc.c  crypt.c  eco.c  fics_addplayer.c  ficsmain.c  ficsmain.h  follow.c  formula.c  formula.h  gamedb.c  gamedb.h  gamedb_old.c  gameproc.c  gameproc.h  gics.c  gics.h  globals.h  help.c  (+44 more)
src/CVS/: Entries  Repository
src/parsers/: .cvsignore  genparser.c  genparser.h  genstruct.pl  parser.c
src/parsers/CVS/: Entries  Repository
src/tdb/: tdb.c  tdb.h
src/tdb/CVS/: Entries  Repository
testplay/: play2.pl
testplay/CVS/: Entries  Repository
tests/: setup.exp  test1.exp  test_telnet.exp  test_timeseal.exp
tests/CVS/: Entries  Repository
timeseal/: README  timeseal_decoder-Linux-ELF-2.4
timeseal/CVS/: Entries  Repository
web/: index.html
web/CVS/: Entries  Repository
