ACLOCAL_AMFLAGS = --install -I m4
EXTRA_DIST = config.h Mamer.hh User.hh Tourney.hh link.hh linklist.hh\
	Command.hh CommandEntry.hh TourneyParameters.hh TourneyPlayers.hh\
	Game.hh Player.hh Storage.hh scripts/wrap-compiler-for-flag-check
bin_PROGRAMS = mamer
mamer_SOURCES = main.cpp Mamer.cpp User.cpp Tourney.cpp link.cpp Command.cpp\
	CommandEntry.cpp TourneyParameters.cpp TourneyPlayers.cpp\
	Game.cpp Player.cpp Storage.cpp
